# Parivar-restaurant-final

./: .env.example  .env.production  .gitignore  .vercelignore  package-lock.json  package.json  patch_images.py  poll_vercel.py  render.yaml  replace_urls.py  seo-audit-skill.md  test_api.py  test_cors.py  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
.vercel/output/: nitro.json
.vercel/output/static/: robots.txt
api/: hello.py  index.py  parivar.db  requirements.txt
api/backend/: pyproject.toml  requirements.txt
api/backend/app/database/: database.py  models.py
backend/: migrate_db.py  parivar.db  requirements.txt  seed.py  update_images.py
backend/app/: main.py  seed_extras.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py  websockets.py
backend/app/database/: crud.py  schemas.py
public/: sitemap.xml
public/frames/: manifest.json
scripts/: extract-frames.mjs
src/: routeTree.gen.ts  styles.css
src/components/: About.tsx  CartDrawer.tsx  Categories.tsx  Catering.tsx  Footer.tsx  HalalBadge.tsx  Hero.tsx  Navbar.tsx  OrderableItemSection.tsx  PostOrderAddOns.tsx  SignatureDishes.tsx  Testimonials.tsx  TodaysSpecials.tsx
src/components/admin/: CategoryItemsAdmin.tsx  ImageUploadField.tsx
src/components/billing/: InvoicePreview.tsx  KitchenTicket.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useNotificationStore.ts  useWebSocket.ts
src/lib/frames/: frameManifest.ts  (+1 more)
src/routes/: __root.tsx  admin.tsx  checkout.tsx  index.tsx  menu.tsx  order-tracking.$orderId.tsx
src/store/: cart.ts
src/utils/: imageUrl.ts
(+121 files in other folders)
