[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.115.6", "uvicorn[standard]==0.34.0", "sqlalchemy==2.0.36", "pydantic==2.10.3", "pydantic-settings==2.7.0", "python-multipart==0.0.19", "websockets==14.1", "passlib[bcrypt]==1.7.4", "bcrypt==4.0.1", "python-jose[cryptography]==3.3.0", "asyncpg==0.30.0", "aiosqlite==0.20.0" ]
requires-python = "==3.12.*"
